--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		<div class="time"></div>
 		<div class="events"></div>
 	</div>
-
+    
+    <script type="text/javascript" src="testEvents.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
