fixing space issue

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+    <input type="number" id="numberValue" />
+    <input type="button" value="Create Events" onClick="createNewEvents()" />
 	<div class="calendar">
 		<div class="time"></div>
 		<div class="events"></div>
